--- a/public/main.css
+++ b/public/main.css
@@ -1,6 +1,16 @@
+body {
+  background-color: #fbf7f2;
+}
+
 .product {
+  position: relative;
   display: flex;
   padding: 10px;
+  margin: 20px 0;
+
+  background-color: #fff;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
 .thumbnail {
   max-width: 200px;
@@ -18,6 +28,19 @@
   font-weight: 600;
 }
 .product .date {
+  position: absolute;
+  display: block;
+  bottom: 10px;
+  right: 20px;
   color: grey;
   font-size: 13px;
+}
+.product .userName {
+  margin: 20px 0;
+}
+
+.navbar {
+  background-color: #fff;
+
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
 }
